assets/css/common/pub-style.css
.pub-page h2 {
  border-bottom: 1px solid var(--secondary);
  padding-bottom: .5rem;  
  margin-top: 1rem;
}

/* Remove bottom margin if the next element is .pub-links */
.pub-page p:has(+ .pub-links) {
  margin-bottom: 0em;
}

/* Reduce spacing between the citation and publinks */
.pub-page p:has(+ .pub-links) {
  margin-bottom: 0.25em;
}

.pub-page p {
  margin-bottom: 1em;
  display: block;
}

.pub-page ul {
  list-style-type: "";
  list-style: none;
  padding-left: 0rem;
}

/* Reduce spacing for list items without publinks */
.pub-page li:not(:has(+ .pub-links)) {
  margin-bottom: 0.5em;
}

/* Normal spacing for list items with publinks */
.pub-page li:has(+ .pub-links) {
  margin-bottom: 1em;
}

/* Add spacing after publinks */
.pub-page .pub-links {
  margin-top: -0.25em;
  margin-bottom: 1em;
  font-size: 0.955em;
}

.pub-entry {
    line-height: 1.6;
}

.pub-title {
    font-size: 1em;
    color: #156dab !important;
  font-weight: bold;
}

.pub-title strong {
    color: var(--primary);
}

.pub-authors {
    font-size: 0.9em;
}

.pub-venue {
    font-size: 0.9em;
    color: var(--secondary);
}

.pub-type strong {
    color: #4a90e2;
    font-weight: 600;
    font-size: 0.9em;
}

.pub-links {
    margin-top: 0.5em;
}

.pub-date {
    font-size: 0.9em;
    color: var(--secondary);
}

